v3.15 - Not yet released

- ADDED: Separate task tracking for each background task VisBio is performing
- ADDED: Rearrange main VisBio window to be more streamlined

- TWEAK: Report more information during initial dataset creation
- TWEAK: Don't create errors.log unless necessary
- TWEAK: Eliminate some debugging messages from the output console


v3.11 - Monday, October 10, 2005

- FIXED: Bug in Zeiss LSM reader
- FIXED: Bug in Metamorph STK reader with multi-image files
- FIXED: Ugly status messages with volume rendering and ImageRendererJ3D


v3.10 - Monday, October 3, 2005

- ADDED: Support for IPLab file format
- ADDED: Better support for Zeiss LSM, Metamorph STK and Fluoview TIFF

- TWEAK: Quicker initial processing of multi-file datasets
- TWEAK: More efficient image display in many cases (using ImageRendererJ3D)

- FIXED: Disallow "In 3D" display option when Java3D is not installed


v3.09 - Monday, July 25, 2005

- ADDED: Ability to export data objects directly to ImageJ
- ADDED: Folder chooser to export dialog for specifying which folder to use

- TWEAK: Warn user if export to 24-bit RGB will truncate data values

- FIXED: Ignore first image (pure white RGB) of Openlab datasets


v3.08 - Tuesday, July 19, 2005

- ADDED: Ability to specify pixel type for datasets uploaded to OME
- ADDED: A command-line tool for uploading datasets to OME: "omeul"

- FIXED: More robust visbio.tmp deletion on program exit


v3.07 - Friday, July 15, 2005

- ADDED: Ability to export 8-bit grayscale, 16-bit grayscale, and 32-bit
         floating point TIFFs (in addition to 24-bit color TIFFs); which format
         to use is auto-detected
- ADDED: Option to configure eye separation distance

- FIXED: Problem with eye separation in stereo mode


v3.06 - Tuesday, July 12, 2005

- FIXED: Bug in MATLAB transform for data with only one range component
- FIXED: Bug in collapse and projection transforms where some axes don't work