@@ -1,20 +1,15 @@
 <html><body><h2>QuickTime movies</h2>
 
 <p>VisBio supports reading and writing QuickTime movies (not including
-metadata), but it requires that QuickTime for Java be installed.
+metadata), but it requires that QuickTime be installed.
 
 <p>If you are running Mac OS X, you probably already have QuickTime installed.
 If you are running Linux, QuickTime is unfortunately not available. If you do
 not have QuickTime installed, visit the
 <a href="http://www.apple.com/quicktime/download/standalone.html">QuickTime
-download page</a>. Once QuickTime for Java is installed on your machine, VisBio
-will be able to import QuickTime movies. On Windows systems, VisBio will also
-gain the capability to write QuickTime movies.
-
-<p>Unfortunately, the optional QuickTime for Java component is no longer
-installed by default. To enable it, choose to perform a Custom installation
-when the installer asks, then scroll down and ensure the "QuickTime for Java"
-box is checked.
+download page</a>. Once QuickTime is installed on your machine, VisBio will be
+able to import QuickTime movies. On Windows systems, VisBio will also gain the
+capability to write QuickTime movies.
 
 <br><h3>See also:</h3>
 
